codepkg/objects/Sys_Capex_Auto_Num__c.object
<CustomObject>
    <fields>
        <fullName>Capex_Company_Name__c</fullName>
        <label>Capex Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capex_Location_code__c</fullName>
        <label>Capex Location Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Num__c</fullName>
        <label>Next Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Code</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>Sys_Capex Auto Nums</relationshipLabel>
        <relationshipName>Sys_Capex_Auto_Nums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sys_Serial_Number__c</fullName>
        <label>Sys Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Sys_Capex Auto Num</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Capex_Company_Name__c</columns>
        <columns>Code__c</columns>
        <columns>Capex_Location_code__c</columns>
        <columns>Next_Num__c</columns>
        <columns>Year__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Company_Location_Code</fullName>
        <columns>NAME</columns>
        <columns>Capex_Company_Name__c</columns>
        <columns>Capex_Location_code__c</columns>
        <columns>Code__c</columns>
        <columns>Next_Num__c</columns>
        <columns>Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2021</value>
        </filters>
        <label>Company Location Code</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mould_ID_Generation</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Capex_Company_Name__c</columns>
        <columns>Capex_Location_code__c</columns>
        <columns>Code__c</columns>
        <columns>Next_Num__c</columns>
        <columns>Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code__c</field>
            <operation>contains</operation>
            <value>Mould</value>
        </filters>
        <filters>
            <field>Code__c</field>
            <operation>contains</operation>
            <value>Tag</value>
        </filters>
        <label>Mould &amp;Tag ID Generation</label>
        <language>en_US</language>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RetailerCode_RFID</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Next_Num__c</columns>
        <columns>Year__c</columns>
        <columns>Sys_Serial_Number__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>_RetailerCode_RFID</label>
        <sharedTo>
            <role>Administrator_Role</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Year_2013</fullName>
        <columns>NAME</columns>
        <columns>Capex_Company_Name__c</columns>
        <columns>Capex_Location_code__c</columns>
        <columns>Code__c</columns>
        <columns>Next_Num__c</columns>
        <columns>Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </filters>
        <label>Year 2013</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Year_2014</fullName>
        <columns>NAME</columns>
        <columns>Capex_Company_Name__c</columns>
        <columns>Capex_Location_code__c</columns>
        <columns>Code__c</columns>
        <columns>Next_Num__c</columns>
        <columns>Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </filters>
        <label>Year 2014</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Year_2015</fullName>
        <columns>NAME</columns>
        <columns>Capex_Company_Name__c</columns>
        <columns>Capex_Location_code__c</columns>
        <columns>Code__c</columns>
        <columns>Next_Num__c</columns>
        <columns>Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>Year 2015</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Year_2016</fullName>
        <columns>NAME</columns>
        <columns>Capex_Company_Name__c</columns>
        <columns>Capex_Location_code__c</columns>
        <columns>Code__c</columns>
        <columns>Next_Num__c</columns>
        <columns>Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>Year 2016</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Year_2017</fullName>
        <columns>NAME</columns>
        <columns>Capex_Company_Name__c</columns>
        <columns>Capex_Location_code__c</columns>
        <columns>Code__c</columns>
        <columns>Next_Num__c</columns>
        <columns>Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>Year 2017</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Year_2018</fullName>
        <columns>NAME</columns>
        <columns>Capex_Company_Name__c</columns>
        <columns>Capex_Location_code__c</columns>
        <columns>Code__c</columns>
        <columns>Next_Num__c</columns>
        <columns>Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>Year 2018</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Year_2019</fullName>
        <columns>NAME</columns>
        <columns>Capex_Company_Name__c</columns>
        <columns>Capex_Location_code__c</columns>
        <columns>Code__c</columns>
        <columns>Next_Num__c</columns>
        <columns>Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <label>Year 2019</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Year_2020</fullName>
        <columns>NAME</columns>
        <columns>Capex_Company_Name__c</columns>
        <columns>Capex_Location_code__c</columns>
        <columns>Code__c</columns>
        <columns>Next_Num__c</columns>
        <columns>Year__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2020</value>
        </filters>
        <label>Year 2020</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CPX-{0000}</displayFormat>
        <label>Sys_Capex Auto Num Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sys_Capex Auto Nums</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>